Added in animated hamburger menu as well as an animated mobile menu with overlay

--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -1,6 +1,26 @@
 .header {
+	// Hamburger open styles
+
+	&.open {
+		.header__toggle {
+			> span:first-child {
+				transform: rotate(45deg);
+			}
+			> span:nth-child(2) {
+				opacity: 0;
+			}
+			> span:last-child {
+				transform: rotate(-45deg);
+			}
+		}
+	}
+
 	nav {
-		padding: 1.0625rem 1.5rem;
+		// adding this position os that the mobile meny doesn't scroll over it
+		position: relative;
+		background-color: $white;
+		padding-top: 1.0625rem;
+		padding-bottom: 1.0625rem;
 	}
 
 	// all weird rem sizing is from working our size in pixels using a box on figma and then dividing by 16 to get in rem
@@ -12,16 +32,46 @@
 		}
 	}
 
-	&__menu {
+	&__toggle {
 		> span {
 			display: block;
 			width: 26px;
 			height: 2px;
 			background-color: $darkBlue;
+			transition: all 300ms ease-in-out;
+			transform-origin: 3px 1px;
 
 			&:not(:last-child) {
-				margin-bottom: 3px;
+				margin-bottom: 5px;
 			}
+		}
+	}
+
+	.overlay {
+		opacity: 0;
+		position: fixed;
+		top: 0;
+		right: 0px;
+		bottom: 0px;
+		left: 0px;
+		background-image: linear-gradient($darkBlue, transparent);
+	}
+
+	&__menu {
+		position: absolute;
+		width: calc(100% - 3rem);
+		left: 50%;
+		transform: translateX(-50%);
+		background: $white;
+		margin-top: 1.5rem;
+		padding: 1.625rem;
+		border-radius: 5px;
+
+		a {
+			display: block;
+			padding: 0.625rem;
+			color: $darkBlue;
+			text-align: center;
 		}
 	}
 
