--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,5 +1,7 @@
 // Importing our sass partials
 @import './variables';
 @import './mixins';
+@import './animations';
+
 @import './globals';
 @import './header';
