--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -17,6 +17,10 @@ body {
 	font-weight: 300;
 	color: $grayishBlue;
 	line-height: 1.3;
+
+	&.noscroll {
+		overflow: hidden; // This stops scrolling and is applied when the mobile menu is opened
+	}
 }
 
 a,
@@ -26,6 +30,13 @@ a:hover {
 }
 
 // Above are some basic setups
+
+// Spacing
+
+.container {
+	padding-left: 1.5rem;
+	padding-right: 1.5rem;
+}
 
 // Flexbox styles
 
