--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -18,9 +18,19 @@ body {
 	color: $grayishBlue;
 	line-height: 1.3;
 
+	@include breakpoint-up(large) {
+		font-size: $font-med;
+	}
+
 	&.noscroll {
 		overflow: hidden; // This stops scrolling and is applied when the mobile menu is opened
 	}
+}
+
+h1,
+h2,
+h3 {
+	margin-top: 0px;
 }
 
 a,
@@ -34,8 +44,38 @@ a:hover {
 // Spacing
 
 .container {
-	padding-left: 1.5rem;
-	padding-right: 1.5rem;
+	max-width: 69.375rem; // 1114 pixel so it doesn't keep getting too wide
+	margin: 0 auto;
+
+	&__pall {
+		padding-top: 2.25rem;
+		padding-right: 2.25rem;
+		padding-bottom: 2.25rem;
+		padding-left: 2.25rem;
+	}
+
+	&__py {
+		padding-top: 2.25rem;
+		padding-bottom: 2.25rem;
+	}
+
+	&__px {
+		padding-left: 2.25rem;
+		padding-right: 2.25rem;
+	}
+
+	&__pt {
+		padding-top: 2.25rem;
+	}
+	&__pr {
+		padding-right: 2.25rem;
+	}
+	&__pb {
+		padding-bottom: 2.25rem;
+	}
+	&__pl {
+		padding-left: 2.25rem;
+	}
 }
 
 // Flexbox styles
@@ -60,6 +100,7 @@ a:hover {
 
 button,
 .button {
+	display: inline-block; //so that it doesn't go into the padding of elements
 	padding: 0.875rem 2.1875rem;
 	background: linear-gradient(to right, $limeGreen, $brightcyan);
 	border: 0;
@@ -67,6 +108,8 @@ button,
 	cursor: pointer;
 	font-weight: 400;
 	transition: opacity 200ms ease-in-out;
+	color: $white;
+	font-size: $font-small;
 
 	&:hover {
 		opacity: 0.75;
