Adding in a responsive 4 column layout with flexbox for the feature section

--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -27,10 +27,38 @@ body {
 	}
 }
 
+//text
 h1,
 h2,
 h3 {
 	margin-top: 0px;
+	font-weight: 300;
+	line-height: 1.15;
+	color: $darkBlue;
+}
+
+h1 {
+	font-size: 2.31rem;
+	margin-bottom: 1.5rem;
+
+	@include breakpoint-up(large) {
+		font-size: $font-xlg;
+	}
+}
+
+h2 {
+	font-size: 1.875rem;
+	margin-bottom: 1.5625rem;
+
+	@include breakpoint-up(large) {
+		font-size: 2.25rem;
+		margin-bottom: 2.25rem;
+	}
+}
+
+p {
+	line-height: 1.5rem;
+	margin-bottom: 2.25rem;
 }
 
 a,
@@ -48,15 +76,20 @@ a:hover {
 	margin: 0 auto;
 
 	&__pall {
-		padding-top: 2.25rem;
+		padding-top: 4.375rem;
 		padding-right: 2.25rem;
-		padding-bottom: 2.25rem;
+		padding-bottom: 4.375rem;
 		padding-left: 2.25rem;
+
+		@include breakpoint-up(large) {
+			padding-top: 6rem;
+			padding-bottom: 6rem;
+		}
 	}
 
 	&__py {
-		padding-top: 2.25rem;
-		padding-bottom: 2.25rem;
+		padding-top: 4.375rem;
+		padding-bottom: 4.375rem;
 	}
 
 	&__px {
@@ -65,13 +98,13 @@ a:hover {
 	}
 
 	&__pt {
-		padding-top: 2.25rem;
+		padding-top: 4.375rem;
 	}
 	&__pr {
 		padding-right: 2.25rem;
 	}
 	&__pb {
-		padding-bottom: 2.25rem;
+		padding-bottom: 4.375rem;
 	}
 	&__pl {
 		padding-left: 2.25rem;
