--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -17,6 +17,8 @@ body {
 	font-weight: 300;
 	color: $grayishBlue;
 	line-height: 1.3;
+	// Below cuts off any content outside the viewport width taking away an ugly bottom scroll bar
+	overflow-x: hidden;
 
 	@include breakpoint-up(large) {
 		font-size: $font-med;
@@ -72,7 +74,7 @@ a:hover {
 // Spacing
 
 .container {
-	max-width: 69.375rem; // 1114 pixel so it doesn't keep getting too wide
+	max-width: 90rem; // 1440 pixel so it doesn't keep getting too wide
 	margin: 0 auto;
 
 	&__pall {
@@ -133,9 +135,10 @@ a:hover {
 
 button,
 .button {
+	position: relative;
 	display: inline-block; //so that it doesn't go into the padding of elements
 	padding: 0.875rem 2.1875rem;
-	background: linear-gradient(to right, $limeGreen, $brightcyan);
+	background-image: linear-gradient(to right, $limeGreen, $brightcyan);
 	border: 0;
 	border-radius: 50px;
 	cursor: pointer;
@@ -143,9 +146,22 @@ button,
 	transition: opacity 200ms ease-in-out;
 	color: $white;
 	font-size: $font-small;
+	overflow: hidden;
 
-	&:hover {
-		opacity: 0.75;
+	&::before {
+		content: '';
+		position: absolute;
+		top: 0;
+		right: 0;
+		bottom: 0;
+		left: 0;
+		background-color: rgba(255, 255, 255, 0.25);
+		opacity: 0;
+		transition: opacity 150ms ease-in-out;
+	}
+
+	&:hover::before {
+		opacity: 1;
 	}
 }
 
