--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -18,6 +18,7 @@
 	nav {
 		// adding this position os that the mobile meny doesn't scroll over it
 		position: relative;
+		z-index: 2;
 		background-color: $white;
 		padding-top: 1.0625rem;
 		padding-bottom: 1.0625rem;
@@ -50,6 +51,7 @@
 	.overlay {
 		opacity: 0;
 		position: fixed;
+		z-index: 1;
 		top: 0;
 		right: 0px;
 		bottom: 0px;
@@ -59,6 +61,7 @@
 
 	&__menu {
 		position: absolute;
+		z-index: 1;
 		width: calc(100% - 3rem);
 		left: 50%;
 		transform: translateX(-50%);
